# pulumi-frontegg

./: .ci-mgmt.yaml  .golangci.yml  Makefile
.devcontainer/: Dockerfile
.github/actions/download-prerequisites/: action.yml
.github/actions/download-provider/: action.yml
.github/actions/upload-prerequisites/: action.yml
.github/workflows/: build_provider.yml  build_sdk.yml  prerequisites.yml  publish.yml  resync-build.yml
examples/: examples_test.go  go.mod
provider/: go.mod  go.sum  resources.go
provider/cmd/pulumi-resource-frontegg/: bridge-metadata.json  main.go  schema.json
provider/cmd/pulumi-tfgen-frontegg/: main.go
sdk/: go.mod
sdk/dotnet/: AllowedOrigin.cs  EmailProvider.cs  GetPermission.cs  Permission.cs  PermissionCategory.cs  Provider.cs  Pulumi.Frontegg.csproj  RedirectUri.cs  Role.cs  Tenant.cs  User.cs  Utilities.cs  Webhook.cs  Workspace.cs
sdk/dotnet/Config/: Config.cs
sdk/dotnet/Inputs/: WorkspaceAdminPortalArgs.cs  (+117 more)
sdk/nodejs/: allowedOrigin.ts  emailProvider.ts  getPermission.ts  index.ts  package.json  permission.ts  permissionCategory.ts  provider.ts  redirectUri.ts  role.ts  tenant.ts  tsconfig.json  user.ts  webhook.ts  workspace.ts
sdk/python/: README.md  pyproject.toml
sdk/python/pulumi_frontegg/: README.md  __init__.py  _inputs.py  allowed_origin.py  email_provider.py  get_permission.py  outputs.py  permission.py  permission_category.py  provider.py  pulumi-plugin.json  redirect_uri.py  role.py  tenant.py  user.py  webhook.py  workspace.py
sdk/python/pulumi_frontegg/config/: __init__.pyi  vars.py
(+79 files in other folders)
