[project]
  name = "pulumi_frontegg"
  description = "A Pulumi package for creating and managing frontegg cloud resources."
  dependencies = ["parver>=0.2.1", "pulumi>=3.142.0,<4.0.0", "semver>=2.8.1", "typing-extensions>=4.11; python_version < \"3.11\""]
  keywords = ["frontegg", "category/cloud"]
  readme = "README.md"
  requires-python = ">=3.9"
  version = "1.0.0a0+dev"
  [project.license]
    text = "Apache-2.0"
  [project.urls]
    Homepage = "https://github.com/nrf110/pulumi-frontegg"
    Repository = "https://github.com/nrf110/pulumi-frontegg"

[build-system]
  requires = ["setuptools>=61.0"]
  build-backend = "setuptools.build_meta"

[tool]
  [tool.setuptools]
    [tool.setuptools.package-data]
      pulumi_frontegg = ["py.typed", "pulumi-plugin.json"]
